--- a/a-la-française.html
+++ b/a-la-française.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div>
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
         <div class="logo">
         <img src="public/img/logo.png" alt="Ohmyfood"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
@@ -18,65 +21,124 @@
     </header>
 
     <main>
-        <h2 class="name"> A la française</h2>
-        <section class=entrées>
-            <div class="step --whitestep">
-                Tartare de poulpe acidulé
-                Aux zestes d'orange
-                25€ 
+        <img class="picture" src="public/img/française.jpg" alt="A la française"/>
+        
+        <section class="menu">
+            <div class="menu__title">
+                <h2 class="name"> A la française </h2>
+                <div class="like"> 
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+                </div>
             </div>
-            <div class="step --whitestep">
-                Velouté de légumes d'antan
-                Carotte, panais, topinambour
-                35€
-            </div>
-            <div class="step --whitestep">
-                Soupe à l'oignon
-                Revisitée
-                20€
-            </div>
+            <section class="menu__entrées">
+                <div class="menu__subtitle"><h3>entrées</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Tartare de poulpe acidulé</h4>
+                        <p>Aux zestes d'orange</p>
+                    </div>
+                    <div class="menu__price"><p>25€</p></div>                                   
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>                                                       
+                    </div>    
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Velouté de légumes d'antan</h4>
+                        <p>Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                   <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Soupe à l'oignon</h4>
+                        <p >Revisitée</p>
+                    </div>
+                    <div class="menu__price"><p>20€</p> 
+                    </div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
+
+
+            <section class="menu__plats">
+                <div class="menu__subtitle"> <h3>plats</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Coquilles Saint-Jacques</h4> 
+                        <p>Accompagnées d'une purée de panais</p>
+                    </div>
+                    <div class="menu__price"><p>40€</p></div> 
+                    <div class="check">
+                         <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Magret de canard</h4>
+                        <p>Et parmentier de pommes de terre</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Pigeonneau d’Ille-et-Vilaine </h4>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <div class="menu__price"><p>44€</p></div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>               
+                </div>
+            </section>
+
+            <section class="menu__desserts">
+                <div class="menu__subtitle"><h3>desserts</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Pétales de violettes glacés</h4>
+                        <p>Et purée de noisettes</p>   
+                    </div>
+                    <div class="menu__price"><p>18€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Fondant au chocolat</h4>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="menu__price"><p>22€</p></div>
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>                             
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Millefeuille croustillant</h4>
+                        <p>Myrtilles et pâte d’amande</p>
+                    </div>
+                    <div class="menu__price"><p>23€</p></div>                              
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div> 
+                </div>
+            </section>
+        <section class="command"> 
+            <a href="" class="colorbtn">Commander </a>
         </section>
-    
-        <section class="plats">
-            <h3>Plats</h3>
-            <div class="step --whitestep">
-                Coquilles Saint-Jacques
-                Accompagnées d'une purée de panais
-                40€
-            </div>
-            <div class="step --whitestep">
-                Magret de canard
-                Et parmentier de pommes de terre
-                35€
-            </div>
-            <div class="step --whitestep">
-                Pigeonneau d’Ille-et-Vilaine
-                Sur son lit de gnocchis aux légumes
-                44€
-            </div>
-        </section>
-        <section class="desserts">
-            <h3>desserts</h3>
-            <div class="step --whitestep">
-                Pétales de violettes glacés
-                Et purée de noisettes
-                18€
-            </div>
-            <div class="step --whitestep">
-                Fondant au chocolat
-                Revisité
-                22€
-            </div>
-            <div class="step --whitestep">
-                Millefeuille croustillant
-                Myrtilles et pâte d’amande
-                23€
-            </div>
-        </section>
-        <section class="colorbtn">
-            <p>Commander</p>
-        </section>
-</main>    
+    </section>
+    </main>
 
     <footer>
 <h2> ohmyfood</h2>
