--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div>
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
         <div class="logo">
         <img src="public/img/logo.png" alt="Ohmyfood"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
@@ -18,69 +21,136 @@
     </header>
 
     <main>
-        <h2 class="name"> La note enchantée</h2>
-        <div class="step --whitestep">
-            Ravioles de foie gras 
-            Accompagnés de leur crème à la truffe
-            25€       
-        </div>
-        <div class="step --whitestep">
-            Caviar osciètre 
-            Sur blini à la farine de blé noir
-            35€
-        </div>
-        <div class="step --whitestep">
-            Homard et espuma de potiron
-            Mariné aux zestes d'orange
-            20€
-        </div>
-        <div class="step --whitestep">
-            Foie gras de canard cuit entier
-            Confiture de figue et pain toasté
-            35€
-        </div>
-    </section>
+        <div class="picturebox">
+        <img class="picture" src="public/img/note-enchantee.jpg" alt="La note enchantée"/></div>
+        
+        <section class="menu">
+            <div class="menu__title">
+                <h2 class="name">La note enchantée </h2>
+                <div class="like"> 
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+                </div>
+            </div>
+            <section class="menu__entrées">
+                <div class="menu__subtitle"><h3>entrées</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Ravioles de foie gras</h4>
+                        <p>Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="menu__price"><p>25€</p></div>                                   
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>     
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Caviar osciètre</h4>
+                        <p>Sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                   <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Homard et espuma de potiron</h4>
+                        <p >Mariné aux zestes d'orange</p>
+                    </div>
+                    <div class="menu__price"><p>20€</p> 
+                    </div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <p >Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p> 
+                    </div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
 
-    <section class="plats">
-        <h3>Plats</h3>
-        <div class="step --whitestep">
-            Noix de coquilles Saint-Jacques
-            Sur lit de purée de céleri-rave
-            40€     
-        </div>
-        <div class="step --whitestep">
-            Langoustine poêlée
-            Purée de patates douces
-            35€
-        </div>
-        <div class="step --whitestep">
-            Mijoté de queue de boeuf 
-            Et riz sauvage aux zestes de citron
-            44€
-        </div>
+
+            <section class="menu__plats">
+                <div class="menu__subtitle"> <h3>plats</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Noix de coquilles Saint-Jacques</h4> 
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="menu__price"><p>40€</p></div> 
+                    <div class="check">
+                         <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Langoustine poêlée</h4>
+                        <p>Purée de patates douces</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Mijoté de queue de boeuf </h4>
+                        <p>Et riz sauvage aux zestes de citron</p>
+                    </div>
+                    <div class="menu__price"><p>44€</p></div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>               
+                </div>
+            </section>
+
+            <section class="menu__desserts">
+                <div class="menu__subtitle"><h3>desserts</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <p>Glace au caramel brun et sel de Guérande</p>   
+                    </div>
+                    <div class="menu__price"><p>18€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Baba au rhum revisité</h4>
+                        <p>Avec son coulis de citron</p>
+                    </div>
+                    <div class="menu__price"><p>22€</p></div>
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>                             
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Tarte au citron meringuée</h4>
+                        <p>Déstructurée</p>
+                    </div>
+                    <div class="menu__price"><p>23€</p></div>                              
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div> 
+                </div>
+            </section>
+        <section class="command"> 
+            <a href="" class="colorbtn">Commander </a>
+        </section>
     </section>
-    <section class="desserts">
-        <h3>desserts</h3>
-        <div class="step --whitestep">
-            Macaron noisette et chocolat
-            Glace au caramel brun et sel de Guérande
-            18€
-        </div>
-        <div class="step --whitestep">
-            Baba au rhum revisité 
-            Avec son coulis de citron
-            22€
-        </div>
-        <div class="step --whitestep">
-            Tarte au citron meringuée 
-            Déstructurée
-            23€
-        </div>
-    </section>
-    <section class="colorbtn">
-        <p>Commander</p>
-    </section>
-</main>    
+    </main>
 
     <footer>
 <h2> ohmyfood</h2>
