--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -22,7 +22,8 @@
     </header>
 
     <main>
-        <div class="picture"></div>
+        <img class="picture" src="public/img/palette-gout.jpg" alt="la-palette-du-gout"/>
+        
         <section class="menu">
             <div class="menu__title">
                 <h2 class="name"> La palette du goût</h2>
@@ -37,11 +38,10 @@
                     <div class="menu__choice">
                         <h4>Fricassée d'escargot</h4>
                         <p>Au piment d'Espelette</p>
-                    </div>                                    
+                    </div>
+                    <div class="menu__price"><p>25€</p></div>                                   
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">25€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i>
-                        </div>                               
+                        <i class="fas fa-check-circle"></i>                                              
                     </div>     
                 </div>
                 <div class="menustep">
@@ -49,33 +49,35 @@
                         <h4>Foie gras de canard mi-cuit</h4>
                         <p>Et ses copeaux de truffe noire</p>
                     </div>
+                    <div class="menu__price"><p>35€</p></div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">35€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                   <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Oeuf au plat</h4>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <p >Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <div class="menu__price"><p>20€</p> 
                     </div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">20€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                      <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
             </section>
+
 
             <section class="menu__plats">
                 <div class="menu__subtitle"> <h3>plats</h3></div>
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Filet de boeuf aux herbes</h4> 
-                        <p>Accompagné de sa ribambelle de légumes</p> 
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
+                    <div class="menu__price"><p>40€</p></div> 
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">40€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="menustep">
@@ -83,9 +85,9 @@
                         <h4>Parmentier de queue de boeuf</h4>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
+                    <div class="menu__price"><p>35€</p></div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">35€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                        <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="menustep">
@@ -93,9 +95,9 @@
                         <h4> Filet de turbot</h4>
                         <p>Aux agrumes</p>
                     </div>
+                    <div class="menu__price"><p>44€</p></div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">44€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                      <i class="fas fa-check-circle"></i>
                     </div>               
                 </div>
             </section>
@@ -107,9 +109,9 @@
                         <h4>Paris-Brest</h4>
                         <p>Revisité</p>   
                     </div>
+                    <div class="menu__price"><p>18€</p></div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">18€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                        <i class="fas fa-check-circle"></i>
                     </div>                          
                 </div>
                 <div class="menustep">
@@ -117,19 +119,19 @@
                         <h4>Macaron au chocolat d'exception</h4>
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
+                    <div class="menu__price"><p>22€</p></div>
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">22€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                     <i class="fas fa-check-circle"></i>
                     </div>                          
                 </div>                             
                 <div class="menustep">
                     <div class="menu__choice">
                         <h4>Mousse au chocolat</h4>
                         <p>Au piment d'Espelette et à la truffe noire</p>
-                    </div>                              
+                    </div>
+                    <div class="menu__price"><p>23€</p></div>                              
                     <div class="check">
-                        <div class="check--off"><span class="menu__price">23€</span></div>
-                        <div class="check--on"><i class="fas fa-check-circle"></i></div>
+                     <i class="fas fa-check-circle"></i>
                     </div> 
                 </div>
             </section>
