--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div>
+            <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        </div>
         <div class="logo">
         <img src="public/img/logo.png" alt="Ohmyfood"/>
         <h1 hidden> Ohmyfood , réservez votre menu avant votre venue</h1>
@@ -18,65 +21,123 @@
     </header>
 
     <main>
-        <h2 class="name"> Le délice des sens</h2>
-        <h3>entrées</h3>
-        <div class="step --whitestep">
-            Tartare de thon
-            Assaisonné au yuzu
-            25€ 
-        </div>
-        <div class="step --whitestep">
-            Bouchée de homard croustillant 
-            Et sa farandole de petits légumes
-            35€
-        </div>
-        <div class="step --whitestep">
-            Velouté de cèpes 
-            Aux truffes
-            20€ 
-        </div>
-    </section>
+        <img class="picture" src="public/img/delice-sens.jpg" alt="Le délice des sens"/>
+        
+        <section class="menu">
+            <div class="menu__title">
+                <h2 class="name">Le délice des sens </h2>
+                <div class="like"> 
+                <i class="far fa-heart default-icon"></i>
+                <i class="fas fa-heart hover-icon"></i>
+                </div>
+            </div>
+            <section class="menu__entrées">
+                <div class="menu__subtitle"><h3>entrées</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Tartare de thon</h4>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div class="menu__price"><p>25€</p></div>                                   
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>                                                      
+                    </div>     
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Bouchée de homard croustillant </h4>
+                        <p>Et sa farandole de petits légumes</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                   <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Velouté de cèpes </h4>
+                        <p >Aux truffes</p>
+                    </div>
+                    <div class="menu__price"><p>20€</p> 
+                    </div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
 
-    <section class="plats">
-        <h3>Plats</h3>
-        <div class="step --whitestep">
-            Poulet rôti aux herbes de Provence 
-            Et sa crème de truffe
-            40€
-        </div>
-        <div class="step --whitestep">
-            Langouste rôtie 
-            Et ses légumes de saison
-            35€
-        </div>
-        <div class="step --whitestep">
-            Côte de boeuf Angus 
-            Et sa purée de panais
-            44€
-        </div>
-    </section>
-    <section class="desserts">
-        <h3>desserts</h3>
-        <div class="step --whitestep">
-            Farandole de desserts
-            Du chef
-            18€
-        </div>
-        <div class="step --whitestep">
-            Crème brulée 
-            Revisitée
-            22€
-        </div>
-        <div class="step --whitestep">
-            Tiramisu 
-            À la noisette
-            23€
-        </div>
-    </section>
-    <section class="colorbtn">
-        <p>Commander</p>
-    </section>
 
+            <section class="menu__plats">
+                <div class="menu__subtitle"> <h3>plats</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Poulet rôti aux herbes de Provence</h4> 
+                        <p>Et sa crème de truffe</p>
+                    </div>
+                    <div class="menu__price"><p>40€</p></div> 
+                    <div class="check">
+                         <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Langouste rôtie</h4>
+                        <p>Et ses légumes de saison</p>
+                    </div>
+                    <div class="menu__price"><p>35€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Côte de boeuf Angus</h4>
+                        <p>Et sa purée de panais</p>
+                    </div>
+                    <div class="menu__price"><p>44€</p></div>
+                    <div class="check">
+                      <i class="fas fa-check-circle"></i>
+                    </div>               
+                </div>
+            </section>
+
+            <section class="menu__desserts">
+                <div class="menu__subtitle"><h3>desserts</h3></div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Farandole de desserts</h4>
+                        <p>Du chef</p>   
+                    </div>
+                    <div class="menu__price"><p>18€</p></div>
+                    <div class="check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Crème brulée</h4>
+                        <p>Revisitée</p>
+                    </div>
+                    <div class="menu__price"><p>22€</p></div>
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div>                          
+                </div>                             
+                <div class="menustep">
+                    <div class="menu__choice">
+                        <h4>Tiramisu</h4>
+                        <p>À la noisette</p>
+                    </div>
+                    <div class="menu__price"><p>23€</p></div>                              
+                    <div class="check">
+                     <i class="fas fa-check-circle"></i>
+                    </div> 
+                </div>
+            </section>
+        <section class="command"> 
+            <a href="" class="colorbtn">Commander </a>
+        </section>
+    </section>
     </main>
 
     <footer>
